--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             "name": "启动",
             "type": "node",
             "request": "launch",
-            "program": "${workspaceRoot}/chapter4/上传文件/formidable.js",
+            "program": "${workspaceRoot}/chapter4/HTTPS/https.js",
             "stopOnEntry": false,
             "args": [],
             "cwd": "${workspaceRoot}",
